some style changes, simple mediaquery to fix layout on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,9 @@
 .td_block_futura_flex_1-row {
   border-radius:  .5em    !important;
   border-width:   1em     !important;
-  border-color:   #bcbcbc !important;
+  border-color:   #ffffff00 !important;
   border-style:   solid   !important;
-  background:     #bcbcbc !important;
+  background:     #bcbcbc70 !important;
 }
 
 .td_block_big_grid_flex_2 .td_module_futura_flex_7,
@@ -22,7 +22,7 @@
 {
   border-radius:  .5em    !important;
   border-width:   .25em   !important;
-  border-color:   #bcbcbc !important;
+  border-color:   #ffffff00 !important;
   border-style:   solid   !important;
 }
 
@@ -30,6 +30,12 @@
   display:        table;
   padding-left:   .4rem   !important;
   padding-right:  .4rem   !important;
+}
+
+@media(min-width: 768px){
+  .td_block_futura_flex_1-row {
+    display:        flex;
+  }
 }
 
 .td_block_futura_flex_1-row:not(:first-child) {
@@ -40,7 +46,7 @@
   padding-top:    .25rem  !important;
   border-radius:  .5em    !important;
   border-width:   .25em   !important;
-  border-color:   #bcbcbc !important;
+  border-color:   #ffffff00 !important;
   border-style:   solid   !important;
   background:     #ffffff !important;
 }
